# no-mas-hambre-server

./: LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  tables.txt  tables2.txt  tables3.txt
misc/: adiFeedback.csv  diccionario_dpa.json  lugar_post.json  necesidades_20200621.xlsx  necesidades_input.txt  necesidades_input.xlsx  organizacion_post.json  participante_post.json  persona_post.json
web/: Dockerfile  pyproject.toml  web.env
web/app/app/: celery.py  settings.py  urls.py
web/app/base/: admin.py  models.py  serializers.py  urls.py  views.py
web/app/base/management/commands/: load_rpc.py
web/app/base/migrations/: 0001_initial.py  0002_auto_20200620_2211.py  0003_auto_20200620_2233.py  0004_tipogestion.py  0005_auto_20200621_1632.py  0006_auto_20200621_2159.py  0007_auto_20200622_2017.py  0008_auto_20200622_2021.py  0009_auto_20200629_1815.py  0010_auto_20200629_1819.py  0011_auto_20200629_1952.py
web/app/formularios/: admin.py  models.py
web/app/formularios/management/commands/: load_necesidades.py
web/app/formularios/migrations/: 0001_initial.py  0002_auto_20200621_1632.py  0002_auto_20200621_1745.py  0003_auto_20200622_2147.py  0004_auto_20200629_1952.py
